# LuminaPlayer

./: .gitignore  App.tsx  LICENSE  README.md  app.json  color-thief.d.ts  discord-icons.html  electron.d.ts  index.html  index.tsx  manual_ldac.reg  metadata.json  package-lock.json  package.json  types.ts  vite.config.mts  vite.config.ts
.github/: copilot-instructions.md
api/: release-image.js
app/: types.ts
app/components/: ApiKeyModal.tsx  DownloadRedirect.tsx  FooterPlayer.tsx  ImportScreen.tsx  LibraryView.tsx  LyricsView.tsx  PlayerOverlay.tsx
app/hooks/: useAudio.ts  useLibrary.ts  useLyrics.ts  usePlayer.ts  useUI.ts
components/: ApiKeyModal.tsx  LazyImage.tsx  SettingsModal.tsx  Visualizer.tsx
electron/: main.cjs  preload.cjs
native/ldac/: SPECS.md  binding.gyp  index.js  ldacJS.js  package.json
native/ldac/driver/: AltA2DP.inf  AltA2DP.sys  LdacAudio.inf
native/ldac/driver/mod/: install_hack.ps1
native/ldac/src/: ldacBT.c  ldacBT.h  ldac_wrapper.cc
services/: colorService.ts  discordPresenceSettings.ts  geminiService.ts  ldacService.ts  metadataService.ts  tauriService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
