[package]
name = "lumina-music-player"
version = "2.1.1"
description = "A beautiful music player with synced lyrics"
authors = ["Lumina"]
edition = "2021"

[lib]
name = "lumina_music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "5"
